--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.datasource.url=jdbc:mysql://${MYSQL_BD_HOST}/${DB_4}
 spring.datasource.username=${MYSQL_BD_USER}
 spring.datasource.password=${MYSQL_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 api.security.token.secret=${JWT_SECRET:12345678}
