adicionar logica para persistir um valor defaut para status no banco de dados quendo for cadastrado um novo topico e definir atributo de data de expiracao do token JWT no aplication.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.password=${MYSQL_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-api.security.token.secret=${JWT_SECRET:12345678}
+forumhub.security.token.secret=${JWT_SECRET:12345678}
+forumhub.security.token.expiration=${JWT_EXPIRATION:2}
