--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,11 @@ spring.datasource.password=${MYSQL_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-spring.data.web.pageable.page-parameter=pagina
-spring.data.web.pageable.size-parameter=tamanho
-spring.data.web.sort.sort-parameter=ordem
+server.error.include-stacktrace=never
 
 forumhub.security.token.secret=${JWT_SECRET:12345678}
 forumhub.security.token.expiration=${JWT_EXPIRATION:2}
+
+spring.data.web.pageable.page-parameter=pagina
+spring.data.web.pageable.size-parameter=tamanho
+spring.data.web.sort.sort-parameter=ordem
